<resources>
    <string name="version_label">Version&#160;</string>
    <string name="app_name_popular">Popular TV Shows</string>
    <string name="app_name_search">Search TV Shows</string>
    <string name="app_name_preference">Preferences</string>
    <string name="app_name_about">About WhatsNext</string>
    <string name="app_name_details">TV Show Details</string>
    <string name="title_action_settings">Settings</string>
    <string name="title_action_about">About</string>
    <string name="title_action_notifications">Notifications</string>
    <string name="title_activity_notification">Notifications</string>
    <string name="title_action_news">News</string>
    <string name="app_search_title">Search TV Show</string>
    <string name="search_button_home">Search</string>
    <string name="cancel_button_progress_dialog">Cancel</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="search_title_home">Search TV Show</string>
    <string name="search_message">Searching…</string>
    <string name="no_next_episode_info">Next Episode: We don\'t know yet</string>
    <string name="no_more_in_production">Closed</string>
    <string name="loading_seasons_description">Loading seasons…</string>
    <string name="loading_show_title">Wait…</string>
    <string name="loading_show_description"> "Loading data from TV Show…"</string>
    <string name="loading">Loading…</string>
    <string name="hint_input_serie_name">TV Show Name</string>
    <string name="abbreviation_do_not_have">N/A</string>
    <string name="hey_text">Hey!</string>
    <string name="change_log_news">What\'s New?</string>
    <string name="title_activity_tvshow_details">TV Show Details</string>
    <string name="title_tvshow_detail_placeholder">TV Show Name</string>
    <string name="season_title">Season %1$d</string>
    <string name="season_number_episodes">%1$d episodes</string>
    <string name="season_specials">Specials</string>
    <string name="success_add_new_show">TV Show ADDED to favorites!</string>
    <string name="success_remove_show">TV Show REMOVED from favorites!</string>
    <string name="success_add_new_show_with_name">%1$s ADDED to favorites!</string>
    <string name="success_remove_show_with_name">%1$s REMOVED from favorites!</string>
    <string name="error_no_internet_connection">No internet :(</string>
    <string name="error_blank_search_field">Fill in the search field.</string>
    <string name="error_get_json_data">An error happened while getting data from server.</string>
    <string name="error_generic_message">Something went wrong! Try again later.</string>
    <string name="error_already_has_show">You already added this show.</string>
    <string name="error_already_has_show_with_name">You already added %1$s.</string>
    <string name="error_no_series_found">No TV Show was found</string>
    <string name="error_user_favorites_list">The TV Show could not be added</string>
    <string name="warning_no_next_episode">No information about next episode.</string>
    <string name="warning_no_list_season">This TV Show does not have season.</string>
    <string name="warning_alert">Warning!</string>
    <string name="delete_show_float_menu">Delete \"%1$s\" from your favorites?</string>
    <string name="add_show_float_menu">Add \"%1$s\" to your favorites?</string>
    <string name="cant_load_favorites">Cannot load favorites. Check your connection.</string>
    <string name="cant_load_air_today">Cannot load today\'s airing tv shows. Check your connection.</string>
    <string name="cant_load_popular_shows">Cannot load popular shows. Check your connection.</string>
    <string name="twice_tap_close_app">Click BACK again to exit.</string>
    <string name="rating_note">User rate:</string>
    <string name="next_episode_label">Next Episode:</string>
    <string name="synopsis_label">Overview</string>
    <string name="search_in_ptbr_label">Search results in Portuguese - Brazil</string>
    <string name="seasons_label">Seasons</string>
    <string name="name_next_episode_label">Episode Name:&#160;</string>
    <string name="date_next_episode_label">Episode Date:&#160;</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="data_name_input_show">Ep. %1$s - %2$s\n%3$s</string>
    <string name="data_name_input_show_short">Ep. %1$s - %2$s</string>
    <string name="about_app_label">About</string>
    <string name="no_show_in_favs">You do not have any tv show in favorites</string>
    <string name="ep_without_name">No name yet</string>
    <string name="title_holder_text">%1$s / %2$s</string>
    <string name="air_today_fav_label">Today!!</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_favorites">Refresh the favorites tab.</string>
    <string name="air_today_label_fragment">Airing Today</string>
    <string name="favorites_label_fragment">Favorites</string>
    <string name="download_airing_today_label">TV Shows with episodes airing today</string>
    <string name="retry_snackbar">RETRY</string>
    <string name="auto_load_air_today_link_label">Click here to load automatically</string>
    <string name="nav_search_show_label">Search</string>
    <string name="nav_popular_shows_label">Popular</string>
    <string name="drawer_title_group_label">TV Shows</string>
    <string name="year_title">Year:</string>
    <string name="undo_snackbar">UNDO</string>
    <string name="navigation_drawer_open">Open navigation menu</string>
    <string name="navigation_drawer_close">Close navigation menu</string>
    <string name="red_color_string">#F44336</string>
    <string name="green_color_string">#4CAF50</string>
    <string name="date_format_local">yyyy-MM-dd</string>
    <string name="date_time_format_local">yyyy-MM-dd HH:mm</string>
    <string name="date_format_from_api">yyyy-MM-dd</string>
    <string name="about_whatsnext_label">About WhatsNext</string>
    <string name="about_open_source_label">Code and Partners</string>
    <string name="about_contact_label">Contact</string>
    <string name="drawer_more_text">Others</string>
    <string name="about_whatsnext_text">The WhatsNext-Series was developed to bring an easy way to check the dates of the next episode from any tv show.</string>
    <string name="about_code_partners_text">If you want to contribute to the project, go on our GitHub page.
        \nAll data related to tv shows presented in this application are from TheMovieDB service(API).
        \nWhatsNext-Series is not sponsored by TheMovieDB.</string>
    <string name="about_contact_text">Send us an e-mail!</string>
    <string name="preferences_title_language">Search in PT-BR</string>
    <string name="preferences_summary_language">Always try to get data in pt-br(TV Show information can be empty). Restart to apply the change.</string>
    <string name="preferences_general_label">General</string>
    <string name="preferences_language_key">language_use_ptbr</string>
    <string name="preferences_auto_load_air_today_title">Auto Load TV Shows Airing Today</string>
    <string name="preferences_auto_load_air_today_key">auto_load_air_today</string>
    <string name="preferences_auto_load_air_today_label">Always load automatically tv shows in \"Airing Today\" tab.</string>
    <string name="preferences_images_label">Images</string>
    <string name="preferences_poster_size_key">poster_quality</string>
    <string name="preferences_poster_size_title">Poster Quality</string>
    <string name="preferences_poster_size_summary">Choose the poster quality. Higher quality can consume more cellular data and take more time to load. Restart to apply the change.</string>
    <string name="preferences_backdrop_size_key">backdrop_quality</string>
    <string name="preferences_backdrop_size_title">Background Quality</string>
    <string name="preferences_backdrop_size_summary">Choose the background image quality. Higher quality can consume more cellular data and take more time to load. Restart to apply the change.</string>
    <string name="preferences_dark_mode_key">dark_mode</string>
    <string name="preferences_dark_mode_title">Dark Mode</string>
    <string name="preferences_dark_mode_summary">Enable dark mode.</string>
    <string name="choose_client_email">Choose an email client from…</string>
    <string name="no_client_email">No email client installed.</string>
    <string name="changelog_label">News</string>
    <string name="delete_favorite">Delete</string>
    <string name="delete_favorite_message">Delete %1$d favorites?</string>
    <string name="delete_favorite_message_one">Delete 1 favorite?</string>
    <string name="num_items_selected">%1$d Items Selected</string>
    <string name="one_item_selected">1 Item Selected</string>
    <string name="zero_items_selected">0 Items Selected</string>
    <string name="back_button">Back</string>
    <string name="empty_delete_favorite_list">You need to select at least one item.</string>
    <string name="air_today_img_description">Air today</string>
    <string name="selection_mode_text">Select favorites</string>
    <string name="notifications_label">Notifications</string>
    <string name="off_label">OFF</string>
    <string name="on_label">ON</string>
    <string name="notifications_switch_label">Notifications&#160;</string>
    <string name="alarm_set">Notifications set to:&#160;%1$s:%2$s</string>
    <string name="time_display_format">%1$s:%2$s</string>
    <string name="alarm_off">Notifications off</string>
    <string name="receive_notification_description">Receive notification every day at</string>
    <string name="hh_mm_mask">hh:mm</string>
    <string name="set_time_button">Set Time</string>
    <string name="notification_message">%1$s are airing today</string>
    <string name="notification_message_single_show">%1$s is Show airing today.</string>
    <string name="notification_message_empty">None TV Show airing today</string>
    <string name="notification_title">WhatsNext</string>
    <string name="notification_description_help">
        "The notification system will notify you how many of your favorites tv shows will airing today.\n"
        "If don't have any tv show favorite airing today, nothing will happen.\n"
        "\n"
        "Note: Should be internet connection in time chosen to notification work."
    </string>
    <string name="notification_message_adjective_connector">&#160;and&#160;</string>
    <string name="notification_message_general">%1$d TV Shows airing today</string>
    <string name="notification_message_general_single_show">%1$d TV Show airing today.</string>
    <string name="help_notifications_title">Help</string>
    <string name="tv_show_poster_description">Tv Show Poster</string>
    <string-array name="poster_quality">
        <item>Very High</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
        <item>Very Low</item>
    </string-array>
    <string-array name="backdrop_quality">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string name="toolbar_title_episodes">%1$s - Season %2$d </string>
    <string name="episode_number">Ep. %1$d -&#160;</string>
    <string name="overview_label">Overview:</string>
    <string name="air_date_label">Air Date:</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_season_episodes">Episodes</string>
    <string name="tip_hold_add_remove">Tip 1:You can remove multiple shows from your favorite list by holding them.\nTip 2:You can add any show from the Popular and Airing Today tabs by holding them</string>
    <string name="preferences_tips_enable" translatable="false">tips_pref_enable</string>
    <string name="preferences_summary_tips">Enable/Disable Tips on home screen.</string>
</resources>