<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preferences_general_label">

        <CheckBoxPreference
            android:title="@string/preferences_title_language"
            android:summary="@string/preferences_summary_language"
            android:key="@string/preferences_language_key"
            android:defaultValue="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preferences_images_label">
        <ListPreference
            android:key="@string/preferences_poster_size_key"
            android:title="@string/preferences_poster_size_title"
            android:entries="@array/poster_quality"
            android:entryValues="@array/poster_quality_values"/>

        <ListPreference
            android:key="@string/preferences_backdrop_size_key"
            android:title="@string/preferences_backdrop_size_title"
            android:entries="@array/backdrop_quality"
            android:entryValues="@array/backdrop_quality_value"/>

    </PreferenceCategory>

</PreferenceScreen>