<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search_show"
            android:icon="@drawable/ic_search_black_18dp"
            android:title="@string/search_title_home"/>
    </group>

    <item android:title="@string/drawer_more_text">
        <menu>
            <item
                android:id="@+id/nav_about_app"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/about_app_label"/>
            <item
                android:id="@+id/nav_prefs_app"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/action_settings"/>
        </menu>
    </item>

</menu>
