<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        android:title="@string/favorites_label_fragment" />

    <item
        android:id="@+id/navigation_airing_today"
        android:icon="@drawable/ic_live_tv_black_24dp"
        android:title="@string/air_today_label_fragment" />

    <item
        android:id="@+id/navigation_popular"
        android:icon="@drawable/ic_star_border_black_24dp"
        android:title="@string/nav_popular_shows_label" />

    <!--<item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/navigation_notifications" />-->
</menu>
