<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_notification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.adley.whatsnextseries.activities.NotificationActivity"
    tools:showIn="@layout/activity_notification">

    <Switch
        android:id="@+id/switch_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/notifications_switch_label"
        android:textOff="@string/off_label"
        android:textOn="@string/on_label"
        android:textSize="16sp"
        android:thumb="@drawable/custom_switch_selector"
        android:track="@drawable/custom_track"/>

    <Button
        android:id="@+id/set_time_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/time_text_display"
        android:onClick="showTimePickerDialog"
        android:text="Set Time"/>

    <TextView
        android:id="@+id/time_text_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="hh:mm"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_below="@+id/switch_notification"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"/>

    <TextView
        android:id="@+id/time_text_display_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Recive notification every day at"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@+id/switch_notification"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/fire_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Fire Notification"
        android:layout_below="@+id/set_time_notification"
        android:layout_alignParentStart="true"/>

</RelativeLayout>
