<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_favorites"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:padding="4dp"
    android:weightSum="1"
    app:cardBackgroundColor="@color/cardboard_color_theme"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="280dp"
            android:layout_height="80dp">


            <ImageView
                android:id="@+id/favorites_thumbnail"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:scaleType="fitXY"
                android:src="@drawable/placeholder"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/favorites_title"
                style="@style/TitleShowFavoriteLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:maxLines="1"
                android:text="@string/loading"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/favorites_thumbnail"/>

            <RelativeLayout
                android:id="@+id/episode_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/favorites_thumbnail"
                android:layout_alignStart="@+id/favorites_title"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/fav_next_episode_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:maxLines="1"
                        android:text="@string/loading"/>
                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/fav_next_episode_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/episode_text_layout"
                android:layout_alignStart="@+id/episode_text_layout"
                android:text="@string/next_episode_label"/>

        </RelativeLayout>

    <RelativeLayout
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="end">

        <CheckBox
            android:id="@+id/check_list_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_checkbox_fav"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_marginEnd="10dp"
            android:id="@+id/fav_is_today_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/air_today_fav_label"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

</android.support.v7.widget.CardView>