<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myseries="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    myseries:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.TVShowDetailsActivity"
    tools:showIn="@layout/activity_tvshow_details">

    <include
        android:id="@+id/app_bar"
        layout="@layout/shared_toolbar" />

    <LinearLayout
        android:id="@+id/introduction_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/poster_tvshow"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter"
            android:src="@drawable/placeholder" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_tvshow_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:maxLines="3"
                    android:text="@string/title_activity_tvshow_details"
                    android:textSize="30sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="2dp"
                        android:paddingStart="2dp"
                        android:text="@string/rating_note"
                        android:textSize="20sp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="26dp"
                        android:id="@+id/textView"
                        android:layout_gravity="center_horizontal|center_vertical"/>


                    <TextView
                        android:id="@+id/note_number_tvshow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="2dp"
                        android:paddingStart="2dp"
                        android:textSize="20sp"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/textView"
                        android:layout_gravity="center_horizontal|center_vertical"/>


                </RelativeLayout>

                <RatingBar
                    android:id="@+id/rating_tvshow"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="0.5"
                    android:isIndicator="true"
                    android:theme="@style/RatingBar"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:layout_gravity="center_horizontal|center_vertical"/>

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>


    <View
        android:id="@+id/divider1"
        style="@style/Divider"
        android:layout_below="@id/introduction_layout"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:id="@+id/synopsis_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider1"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/synopsis_label_tvshow"
            style="@style/LabelConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/synopsis_label" />

        <TextView
            android:id="@+id/synopsis_tvshow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start" />
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        style="@style/Divider"
        android:layout_below="@id/synopsis_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider2"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/next_episode_label_tvshow"
            style="@style/LabelConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/next_episode_label" />

        <TextView
            android:id="@+id/next_episode_tvshow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider2">
    </ListView>

</RelativeLayout>
